--- a/client/containers/DashboardSettings/communitySettings.scss
+++ b/client/containers/DashboardSettings/communitySettings.scss
@@ -1,3 +1,17 @@
+$mobile-viewport-cutoff: 750px;
+
+@mixin mobile {
+	@media screen and (max-width: $mobile-viewport-cutoff) {
+		@content;
+	}
+}
+
 .dashboard-settings-container_custom-css-popover {
     max-width: 400px;
+}
+
+.image-upload-row {
+  @include mobile {
+    flex-direction: column;
+  }
 }
