--- a/client/containers/DashboardSettings/dashboardSettings.scss
+++ b/client/containers/DashboardSettings/dashboardSettings.scss
@@ -1,9 +1,29 @@
+$mobile-viewport-cutoff: 750px;
+
+@mixin mobile {
+	@media screen and (max-width: $mobile-viewport-cutoff) {
+		@content;
+	}
+}
+
 .dashboard-settings-container {
 	h2 {
 		margin-bottom: 1em;
 	}
 	.settings-section-component {
 		margin-top: 3em;
+		@include mobile {
+			margin-top: 2em;
+			label .bp3-popover-target {
+				margin-left: 5px;
+				padding-bottom: 3px;
+				opacity: 0.5;
+				.bp3-icon-info-sign svg {
+					height: 12px;
+					width: 12px;
+				}
+			}
+		}
 	}
 	.content-buttons {
 		float: right;
